# Panning_in_room

src/: README.md
src/traj_planner/: CMakeLists.txt  package.xml
src/traj_planner/include/: Astar_searcher.h  display.h  grad_traj_optimizer.h  node.h  qp_generator.h
src/traj_planner/launch/: click.launch  traj.launch
src/traj_planner/lib/: libnlopt.so.0.11.1
src/traj_planner/rviz/: traj_visual.rviz
src/traj_planner/src/: Astar_searcher.cpp  example_click.cpp  qp_generator.cpp  sdf_map_generate.cpp  traj_generate.cpp
