<?xml version="1.0"?>
<package>
  <name>traj_planner</name>
  <version>0.0.1</version>
  <description>The traj_planner package</description>
  <maintainer email="kj@todo.todo">kj</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visulization_msgs</build_depend>
  <build_depend>arc_utilities</build_depend>
  <build_depend>sdf_tools</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>visulization_msgs</run_depend>
  <run_depend>arc_utilities</run_depend>
  <run_depend>sdf_tools</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
